[package]
name = "concrete-token-demo"
version = "0.1.0"
edition = "2021"
description = "Concrete Token JEPA demo using local Liquid AI models"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
